Thu Oct 14 10:08:58 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0 beta 3.

	* Darn.  Missed malloc.h in the port file.

Wed Oct 13 18:38:26 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0 beta 2.

	* Changed #ifdef USE_DMALLOC_LEAP -> #if USE_DMALLOC_LEAP.  Doh.

Mon Oct 11 12:37:13 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0 beta 1.

	* Fixed problems on Linux with the strdup macro.

Wed Aug 25 08:33:39 1999  Gray Watson  <gray@burger.256.com>

	* Added copyright and url info for ident and what.

	* Added support for PTHREAD_MUTEX_INITIALIZER.

Tue Jul 20 12:47:14 1999  Gray Watson  <gray@burger.256.com>

	* Added USE_DMALLOC_LEAP define in the settings.dist file with
	which you can enable the leap functionality which previously was
	the default.

Thu Apr 15 10:21:55 1999  Gray Watson  <gray@burger.letters.com>

	* Dmalloc now looks in the current directory for .dmallocrc before
	checking your $HOME directory.

	* Rewrote a significant piece of the dmalloc utility.  Much better
	code with regards to processing configuration files.

Fri Mar 26 17:57:54 1999  Gray Watson  <gray@burger.letters.com>

	* Increased the filename size from 40 to 100 characters.

Thu Mar 11 17:31:00 1999  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.2.0.

	* Completely reworked the qsort code.

Wed Mar 10 11:18:13 1999  Gray Watson  <gray@burger.letters.com>

	* Improved the autoconfig of abort and qsort safety.

	* Fixed hash problem on 64-bit alphas.

	* Fixed a number of missing prototypes and include problems.

	* Added QSORT_OKAY switch to configure for linux.

	* Fixed STDC ifdefs for C++.  Thanks Eric.

Tue Mar  9 14:26:11 1999  Gray Watson  <gray@burger.letters.com>

	* Fixed some problems with threading and the LOG_THREAD_ID ifdef.

	* Improved the memory table output.  Renamed the table files to be
	dmalloc_tab.[ch] to removed clash with libtable.a.
